--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,3 +62,23 @@
   border: 1px solid #000 !important;
   padding: 5px;
 }
+.alert-success{
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+  padding: 5px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 300px;
+  text-align: center;
+}
+.alert-error{
+  color: #FFF;
+  background-color: red;
+  border-color: red;
+  padding: 5px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 300px;
+  text-align: center;
+}
